@@ -1,3 +1,7 @@
+2011-11-24 version 0.1.1:
+
+  * Added pthread_spinlock, and fixed some bugs.
+
 2011-07-16 version 0.1.0:
 
   * First release.
